css/spacious.less
/* ... */
.no-sidebar-full-width.narrow-978 .alignwide, .no-sidebar-full-width.narrow-1218 .alignwide,
.no-sidebar.narrow-978 .alignwide,
.no-sidebar.narrow-1218 .alignwide {
    margin-left: -10px;
    margin-right: -10px;
}
*/

/*****************************************************************/
/*****************************************************************/
/* =BODY
----------------------------------------------- */
body {
    /*padding-top: 30px;*/
    /*padding-bottom: 30px;*/
}

#spacious__page {
    max-width: @ini_site_width;
    /*-webkit-box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);*/
}

[dir] #spacious__page {
    margin: 30px auto;
    background-color: @ini_background;
    box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
}
body.full-width-layout #spacious__page,
body.mix-layout #spacious__page {
    max-width: 100%;
}
[dir] body.full-width-layout #spacious__page {
    margin: 0;
}
[dir] body.mix-layout #spacious__page {
    margin: 0 auto;
}

[dir] .wide-978 {
    padding-top: 0;
    padding-bottom: 0;
}

[dir] .wide-1218 {
    padding-top: 0;
    padding-bottom: 0;
}

.wide-1218 #spacious__page {
    max-width: 100%;
}

.narrow-978 #spacious__page {
    max-width: 1038px;
}

.wide-978 #spacious__page {
    max-width: 100%;
}

[dir] .wide-978 #spacious__page {
    padding-top: 0;
    padding-bottom: 0;
}

.inner-wrap {
    /*margin: 0 auto;*/
    /*max-width: 1218px;*/
}

[dir] .inner-wrap {
    margin: 0 3rem;
}

body.mix-layout .inner-wrap,
body.mix-layout #spacious__main-flex {
    max-width: @ini_site_width;
}

[dir] body.mix-layout .inner-wrap {
    margin: 0 auto;
}

[dir=ltr] body.mix-layout #spacious__main-flex {
    margin-left: auto;
    margin-right: auto;
}

[dir=rtl] body.mix-layout #spacious__main-flex {
    margin-right: auto;
    margin-left: auto;
}

/*
.wide-1218 .inner-wrap {
    max-width: 1218px;
}
*/

/*
.narrow-978 .inner-wrap, .wide-978 .inner-wrap {
    max-width: 978px;
}
*/

/* =NAMESPACE WIDEBANNER
----------------------------------------------- */
#spacious__widebanner-wrap img {
    position: relative;
    z-index: 1;
}
[dir] #spacious__widebanner-wrap img {
    margin: 0;
}

/* =FEATURED SLIDER
----------------------------------------------- */
#featured-slider {
    position: relative;
}
[dir] #featured-slider {
    border-bottom: 1px solid @ini_border;
}

#featured-slider .slider-cycle {
    position: relative;
}

#featured-slider .slides {
    width: 100%;
}

.wide-978 #featured-slider .slider-cycle,
.wide-1218 #featured-slider .slider-cycle {
    max-width: 1600px;
}

[dir] .wide-978 #featured-slider .slider-cycle, [dir] .wide-1218 #featured-slider .slider-cycle {
    margin: 0 auto;
}

#featured-slider .displayblock {
    display: block;
}

#featured-slider .displaynone {
    display: none;
}

.ie8 #featured-slider .entry-container {
    top: 25%;
}

#featured-slider .entry-container {
    top: 50%;
    /* IE 9 */
    position: absolute;
    max-width: 40%;
}

[dir] #featured-slider .entry-container {
    transform: translateY(-50%);
}

[dir=ltr] #featured-slider .entry-container {
    left: 5%;
}

[dir=rtl] #featured-slider .entry-container {
    right: 5%;
}

[dir=ltr] .wide-978 #featured-slider .entry-container {
    left: 13.8%;
}

[dir=rtl] .wide-978 #featured-slider .entry-container {
    right: 13.8%;
}

[dir=ltr] .wide-1218 #featured-slider .entry-container {
    left: 4.9%;
}

[dir=rtl] .wide-1218 #featured-slider .entry-container {
    right: 4.9%;
}

[dir] #featured-slider .entry-description-container {
    background-color: #555555;
    background-color: rgba(0, 0, 0, 0.3);
    padding: 10px 15px;
    padding: 1rem 1.5rem;
}

[dir] #featured-slider img {
    margin-bottom: 0px;
}

#featured-slider .slider-title-head {
    display: inline-block;
}

[dir] #featured-slider .slider-title-head {
    margin-bottom: 5px;
    margin-bottom: 0.5rem;
}

[dir=ltr] #featured-slider .slider-title-head {
    left: 0;
}

[dir=rtl] #featured-slider .slider-title-head {
    right: 0;
}

[dir] #featured-slider .entry-title {
    padding: 0;
}

.slider-title-head .entry-title a {
    color: #FFFFFF;
    text-decoration: none;
}

#featured-slider .entry-title span {
    color: #FFFFFF;
    display: block;
    font-size: 2.6rem;
}

#featured-slider .entry-content {
    color: #FFFFFF;
}

[dir] #featured-slider .entry-content {
    padding-top: 5px;
    padding-top: 0.5rem;
}

[dir] #featured-slider .entry-content p {
    margin: 0;
    padding: 0;
}

#featured-slider .slider-read-more-button {
    color: #FFFFFF;
    font-family: 'Lato', sans-serif;
    font-size: 4rem;
}

[dir] #featured-slider .slider-read-more-button {
    background-color: @ini_theme_color;
    text-align: center;
    padding: 10px 15px;
    padding: 1rem 1.5rem;
    margin-top: 15px;
}

[dir=ltr] #featured-slider .slider-read-more-button {
    float: left;
}

[dir=rtl] #featured-slider .slider-read-more-button {
    float: right;
}

[dir] #featured-slider .slider-read-more-button:hover {
    background-color: #666666;
}

/* =SLIDER CONTROLLERS
----------------------------------------------- */
#controllers {
    line-height: 0;
    position: absolute;
    width: 100%;
    bottom: 15px;
    z-index: 999;
}
[dir] #controllers {
    text-align: center;
}

#controllers a {
    width: 18px;
    height: 6px;
    overflow: hidden;
    display: inline-block;
    color: #FFFFFF;
}

[dir] #controllers a {
    margin: 0 4px;
    background-color: #FFFFFF;
}

#controllers a:hover, #controllers a.active {
    color: @ini_theme_color;
}

[dir] #controllers a:hover, [dir] #controllers a.active {
    background-color: @ini_theme_color;
}

/* =PAGE HEADER TITLE
----------------------------------------------- */
#spacious__pageheader {
    /*-webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.05) inset;*/
    /*margin-bottom: 1rem;*/
    /* need a higher z-index than context and page tools */
    z-index: 11; 
}
/* ... */

